--- a/index.html
+++ b/index.html
@@ -21,39 +21,38 @@
     </header> 
     <main>
         <h1>Home</h1>
-        <p>hello world</p>
         <section>
             <h2>Resum&eacute;</h2>
                 <h3>Work Experience</h3>
                     <ul>
-                        <li>ProQuest<span>User Experience Intern&mdash;June 2018 to present</span></li>
+                        <li>ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
                             <ul>
                                 <li>Ran user testing via UserTesting.com</li>
                                 <li>Revised user interface mockups with PhotoShop</li>
                                 <li>Created slide deck and assisted with presentation on email marketing</li>
-                            </ul>
-                        <li>The University of Michigan&mdash;Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span></li>
+                            </ul></li>
+                        <li>The University of Michigan&mdash;Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
                             <ul>
                                 <li>Played key role in design and communication during U-M HomeLab construceion</li>
                                 <li>Estimated research project costs, tracked time sheets, and invoiced expenses</li>
                                 <li>Assisted ISR web designer with forthcoming BioSocial Methods Collaborative website</li>
-                            </ul>
-                        <li>The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span></li>
+                            </ul></li>
+                        <li>The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span>
                             <ul>
                                 <li>Analyzed website and created a search engine optimization (SEO) deliverable</li>
                                 <li>Increased web traffic by 18% once recommendations were implemented</li>
-                            </ul>
-                        <li>Pure Visibility<span>Independent Bookkeeper&mdash;August 2006 to February 2007</span></li>
+                            </ul></li>
+                        <li>Pure Visibility<span>Independent Bookkeeper&mdash;August 2006 to February 2007</span>
                             <ul>
                                 <li>Managed the A/R and A/P of this growing digital marketing company using Quickbooks</li>
                                 <li>Received Pure Visibility's "You Rock" award</li>
-                            </ul>
-                        <li>Rochman Design-Build<span>Assistant Designer &amp; Office Manager&mdash;May 1996 to February 2000</span></li>                  <ul>
+                            </ul></li>
+                        <li>Rochman Design-Build<span>Assistant Designer &amp; Office Manager&mdash;May 1996 to February 2000</span>                <ul>
                                 <li>Assisted with assessing client needs and selectin materials</li>
                                 <li>Maintained job cost accounting using FileMaker Pro</li>
                                 <li>Planned and hosted open houses</li>
                                 <li>Created advertisements and fliers</li>
-                            </ul>    
+                            </ul></li>    
                     </ul>
 
     </section>
