--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/royce.css">
-    <title>Home-Adrienne Royce</title>
+    <title>Home&mdash;Aroyce</title>
 </head>
 <body>
     <header>
@@ -13,14 +13,20 @@
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">UMSI</a></li>
-                <li><a href="">ISR</a></li>
-                <li><a href="">UI Design</a></li>
+                <li><a href="isr.html">ISR</a></li>
+                <li><a href="umsi.html">UMSI</a></li>
+                <li><a href="ui-design.html">UI Design</a></li>
             </ul>
         </nav>   
     </header> 
     <main>
         <h1>Home</h1>
+        <div>
+            <p>
+            [I need to put some kind of an introductory paragraph here about myself]
+            </p>
+            
+        </div>
         <section>
             <h2>Resum&eacute;</h2>
                 <h3>Work Experience</h3>
