--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Home</h1>
         <div>
             <p>
-            [I need to put some kind of an introductory paragraph here about myself]
+                Welcome to my website! In addition to my resum&eacute;, you'll find my portfolio. <a href="isr.html">ISR</a> contains my work at the U-M Institute for Social Research. I am a part-time student at the <a href="umsi.html">University of Michigan School of Information (UMSI)</a> with several completed projects to share. The <a href=:ui-design.html">UI Design</a> page displays user interface (UI) projects from classes at Washtenaw Community College.
             </p>
             
         </div>
