--- a/ui-design.html
+++ b/ui-design.html
@@ -22,7 +22,7 @@
     <main>
             <h1>User Interface (UI) Design<br><span>Washtenaw Community College (WCC)</span></h1>
             <p>
-                I created several user interface mock-ups in Interface Design I & II classes at WCC. I will have a page that displays these projects as either tiles or a carousel. Each project will consist of a JPG image of the the mockup and the context for the assignment.
+                I created several user interface mock-ups during two interface design classes at WCC. The instructor would typically provide the company name and require a specific page layout style. Progress was evaluated with a design critique in front of the class each week.
             </p>
         <section>
             <h2>Panache Bridal Mood Board and Index Page</h2>
@@ -41,7 +41,7 @@
         <section>
             <h2>Moss Love Terrarium</h2>
             <p>
-                A dominant photo style index page redesign of a company whose name I pulled from the instructor’s envelope of possibilities. The target user was a young bride seeking wedding decor and gifts for her bridal party.
+                A dominant photo index page redesign for a company whose name I pulled from the instructor’s envelope of possibilities. The target user was a young bride seeking wedding decor and gifts for her bridal party.
             </p>
             <figure>
                     <img src="images/ui-moss-love.jpg" alt="">
@@ -51,7 +51,7 @@
         <section>
             <h2>Market Basket Grocery Store</h2>
             <p>
-                This assignment was a three-bucket index page redesign plus two advertising layouts; the instructor provided the text and I found the imagery. After three, weekly design critiques I was able to hone in on the patterning that evokes the weave of basketry.
+                This assignment was a three-bucket index page redesign; the instructor provided the text and I found the imagery. After three weekly design critiques, I honed in on a pattern that evokes the weave of basketry.
             </p>
             <figure>
                     <img src="images/ui-market-basket.jpg" alt="">
@@ -61,7 +61,7 @@
         <section>
             <h2>Affordable Tours</h2>
             <p>
-                Another student and I were paired up to tackle this long-and-flat index page redesign. We were required to research current travel websites to find common styles for the industry, then each pick a different approach for the Affordable Tours website. I was able to create my mockup using photos from my travels.
+                Another student and I tackled this long-and-flat index page redesign. We were required to research current travel websites to find common styles for the industry, then each pick a different approach for the Affordable Tours website. I created my mockup with photos from my travels.
             </p>
             <figure>
                     <img src="images/ui-affordable-tours.jpg" alt="">
