--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/royce.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Home&mdash;Aroyce</title>
 </head>
 <body>
@@ -12,10 +14,10 @@
         <img class="landmark" src="images/umsi-headshot.jpg" alt="Adrienne's headshot">
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="isr.html">ISR</a></li>
-                <li><a href="umsi.html">UMSI</a></li>
-                <li><a href="ui-design.html">UI Design</a></li>
+                <li><a href="" title="Homepage">Home</a></li>
+                <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
+                <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
+                <li><a href="ui-design.html" title="User Interface Design">UI Design</a></li>
             </ul>
         </nav>   
     </header> 
@@ -23,7 +25,7 @@
         <h1>Home</h1>
         <div>
             <p>
-                Welcome to my website! In addition to my resum&eacute;, you'll find my portfolio. <a href="isr.html">ISR</a> contains my work at the U-M Institute for Social Research. I am a part-time student at the <a href="umsi.html">University of Michigan School of Information (UMSI)</a> with several completed projects to share. The <a href="ui-design.html">UI Design</a> page displays user interface (UI) projects from classes at Washtenaw Community College.
+                Welcome to my portfolio! You'll find my resum&eacute; below and highlights of my work on the following pages. The <a href="isr.html">ISR</a> page contains my accomplishments while working at the U-M Institute for Social Research (ISR). The UMSI link will take you to my projects as a part-time student at the <a href="umsi.html">University of Michigan School of Information (UMSI)</a>. The <a href="ui-design.html">UI Design</a> page displays user interface (UI) projects from classes at Washtenaw Community College.
             </p>
             
         </div>
@@ -65,8 +67,19 @@
     </main>
     <footer>
         <ul>
-            <li><a href="https://twitter.com/WindSweptTree">@WindSweptTree</a></li>
-            <li><a href="https://www.linkedin.com/in/adrienneroyce/">LinkedIn profile</a></li>
+            <li>
+                <a href="https://twitter.com/WindSweptTree" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/adrienneroyce/" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/aroyce" title="to Github profile">
+                    <i class="fab fa-github"></i>Github page
+                </a>
+            </li>
         </ul>
     </footer>
 </body>
