--- a/ui-design.html
+++ b/ui-design.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/royce.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>UI Design&mdash;Aroyce</title>
 </head>
 <body>
@@ -12,10 +14,10 @@
         <img class="landmark" src="images/ui-snowfarm-sm.jpg" alt="A screenshot from the index page of my Snow Farm website redesign">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="isr.html">ISR</a></li>
-                <li><a href="umsi.html">UMSI</a></li>
-                <li><a href="">UI Design</a></li>
+                <li><a href="index.html" title="Homepage">Home</a></li>
+                <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
+                <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
+                <li><a href="" title="User Interface Design">UI Design</a></li>
             </ul>
         </nav>   
     </header> 
@@ -30,11 +32,11 @@
                 I was paired up with another student and we were given the challenge of using the color green and the theme of outer space to incorporate into our design. He and I had to take a different approach to the color and theme. Since aliens and spaceships didn't seem suitable for a high-end Southern California bridal store, I took inspiration from the ancient mariners who gazed up at the stars.
             </p>
             <figure>
-                    <img src="images/ui-panache-mood-board.jpg" alt="">
+                    <img src="images/ui-panache-mood-board.jpg" alt="a collage of photos primarily showing green and blue objects">
                     <figcaption>My Panache Bridal mood board</figcaption>
             </figure>
             <figure>
-                    <img src="images/ui-panache-bridals.jpg" alt="">
+                    <img src="images/ui-panache-bridals.jpg" alt="the newly designed webpage with an image of a bride, the interior of a bridal store, a model on a runway, and a necklace">
                     <figcaption>A long-and-flat index page redesign</figcaption>
             </figure>
         </section>
@@ -44,7 +46,7 @@
                 A dominant photo index page redesign for a company whose name I pulled from the instructor’s envelope of possibilities. The target user was a young bride seeking wedding decor and gifts for her bridal party.
             </p>
             <figure>
-                    <img src="images/ui-moss-love.jpg" alt="">
+                    <img src="images/ui-moss-love.jpg" alt="a large image of moss with pink flowers">
                     <figcaption>The new Moss Love index page</figcaption>
             </figure>
         </section>
@@ -54,7 +56,7 @@
                 This assignment was a three-bucket index page redesign; the instructor provided the text and I found the imagery. After three weekly design critiques, I honed in on a pattern that evokes the weave of basketry.
             </p>
             <figure>
-                    <img src="images/ui-market-basket.jpg" alt="">
+                    <img src="images/ui-market-basket.jpg" alt="a webpage with four featured items">
                     <figcaption>The Market Basket homepage</figcaption>
             </figure>           
         </section>
@@ -64,10 +66,27 @@
                 Another student and I tackled this long-and-flat index page redesign. We were required to research current travel websites to find common styles for the industry, then each pick a different approach for the Affordable Tours website. I created my mockup with photos from my travels.
             </p>
             <figure>
-                    <img src="images/ui-affordable-tours.jpg" alt="">
+                    <img src="images/ui-affordable-tours.jpg" alt="a travel website page displaying nine travel destinations">
                     <figcaption>A travel company website redesign. I was able to use photos from my own travels.</figcaption>
             </figure>           
         </section>
     </main>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://twitter.com/WindSweptTree" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/adrienneroyce/" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/aroyce" title="to Github profile">
+                    <i class="fab fa-github"></i>Github page
+                </a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
