--- a/ui-design.html
+++ b/ui-design.html
@@ -22,10 +22,12 @@
         </nav>   
     </header> 
     <main>
+        <section>
             <h1>User Interface (UI) Design<br><span>Washtenaw Community College (WCC)</span></h1>
             <p>
                 I created several user interface mock-ups during two interface design classes at WCC. The instructor would typically provide the company name and require a specific page layout style. Progress was evaluated with a design critique in front of the class each week.
             </p>
+        </section>
         <section>
             <h2>Panache Bridal Mood Board and Index Page</h2>
             <p>
@@ -36,7 +38,7 @@
                     <figcaption>My Panache Bridal mood board</figcaption>
             </figure>
             <figure>
-                    <img src="images/ui-panache-bridals.jpg" alt="the newly designed webpage with an image of a bride, the interior of a bridal store, a model on a runway, and a necklace">
+                    <img src="images/ui-panache-bridals.jpg" alt="the newly designed bridal store webpage">
                     <figcaption>A long-and-flat index page redesign</figcaption>
             </figure>
         </section>
@@ -74,15 +76,15 @@
     <footer>
         <ul>
             <li>
-                <a href="https://twitter.com/WindSweptTree" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
+                <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/adrienneroyce/" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
+                <a href="https://www.linkedin.com/in/adrienneroyce/" target="_blank" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
                 </a>
             </li>
             <li>
-                <a href="https://github.com/aroyce" title="to Github profile">
+                <a href="https://github.com/aroyce" target="_blank" title="to Github profile">
                     <i class="fab fa-github"></i>Github page
                 </a>
             </li>
