--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
         </nav>   
     </header> 
     <main>
-        <h1>Home</h1>
-        <div>
+        <section>
+            <h1>Home<span>Welcome to my portfolio!</span></h1>
             <p>
-                Welcome to my portfolio! You'll find my resum&eacute; below and highlights of my work on the following pages. The <a href="isr.html">ISR</a> page contains my accomplishments while working at the U-M Institute for Social Research (ISR). The UMSI link will take you to my projects as a part-time student at the <a href="umsi.html">University of Michigan School of Information (UMSI)</a>. The <a href="ui-design.html">UI Design</a> page displays user interface (UI) projects from classes at Washtenaw Community College.
-            </p>
-            
-        </div>
+                You'll find my resum&eacute; below and highlights of my work on the following pages. The <a href="isr.html">ISR</a> page contains my accomplishments while working at the U-M Institute for Social Research (ISR). The UMSI link will take you to my projects as a part-time student at the <a href="umsi.html">University of Michigan School of Information (UMSI)</a>. The <a href="ui-design.html">UI Design</a> page displays user interface (UI) projects from classes at Washtenaw Community College.
+            </p>    
+        </section>
         <section>
             <h2>Resum&eacute;</h2>
                 <h3>Work Experience</h3>
@@ -68,15 +67,15 @@
     <footer>
         <ul>
             <li>
-                <a href="https://twitter.com/WindSweptTree" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
+                <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/adrienneroyce/" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
+                <a href="https://www.linkedin.com/in/adrienneroyce/" target="_blank" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
                 </a>
             </li>
             <li>
-                <a href="https://github.com/aroyce" title="to Github profile">
+                <a href="https://github.com/aroyce" target="_blank" title="to Github profile">
                     <i class="fab fa-github"></i>Github page
                 </a>
             </li>
