--- a/isr.html
+++ b/isr.html
@@ -22,12 +22,14 @@
         </nav>   
     </header> 
     <main>
+        <section>
             <h1>The Institute for Social Research (ISR)<br><span>Research Center for Group Dynamics, BioSocial Methods Collaborative</span></h1>
 
         
             <p>
                 The highlights from my time as lab manager for the BioSocial Methods Collaborative at the Institute for Social Research at the University of Michigan include: playing a key role in design and communication during U-M HomeLab construction; assisting the ISR web developer with the redesign of the BioSocial Methods Collaborative website; and helping develop and conduct user product research. 
             </p>
+        </section>
         <section>
             <h2>U-M HomeLab</h2>
             <p>
@@ -83,15 +85,15 @@
     <footer>
         <ul>
             <li>
-                <a href="https://twitter.com/WindSweptTree" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
+                <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/adrienneroyce/" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
+                <a href="https://www.linkedin.com/in/adrienneroyce/" target="_blank" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
                 </a>
             </li>
             <li>
-                <a href="https://github.com/aroyce" title="to Github profile">
+                <a href="https://github.com/aroyce" target="_blank" title="to Github profile">
                     <i class="fab fa-github"></i>Github page
                 </a>
             </li>
