--- a/umsi.html
+++ b/umsi.html
@@ -22,10 +22,12 @@
         </nav>   
     </header> 
     <main>
+        <section>
             <h1>University of Michigan School of Information<br><span>Master of Science in Information (MSI) Candidate</span></h1>
             <p>
                 The University of Michigan School of Information has provided a number of wonderful opportunities. In addition to serving as Treasurer for the School of Information Masters Association (SIMA) I have participated in the projects and activities highlighted below.
             </p>
+        </section>
         <section>
             <h2>UMSI Design Lab</h2>
             <p>
@@ -37,7 +39,7 @@
                         <figcaption>The CSEG team after a design session</figcaption>
                 </figure>
                 <figure class="tile">
-                        <img src="images/design-clinic-wireframe.jpg" alt="a wireframe of the main user interface showing the selection icons, a vehicle diagram, and workspace areas">
+                        <img src="images/design-clinic-wireframe.jpg" alt="a wireframe of the main user interface">
                         <figcaption>I worked with a teammate to create the wireframes in Illustrator</figcaption>
                 </figure>
                 <figure class="tile">
@@ -55,7 +57,7 @@
                 I contributed the majority of the imagery through research at the Bentley museum and online collection. I also created the “Directors of the Detroit Observatory” timeline and website wireframes. Our site's structure was limited by the Omeka software.
             </p>
             <figure>
-                    <img src="images/astronomy-directors.jpg" alt="the timeline of the Directors of the U-M Detroit Observatory from 1850 to 1975 and contains photos of the eleven men who held the role during that period of time">
+                    <img src="images/astronomy-directors.jpg" alt="A timeline from 1850 to 1975 of the eleven Directors of the U-M Detroit Observatory">
                     <figcaption>A timeline of the Directors of the U-M Detroit Observatory</figcaption>
             </figure>
             <figure>
@@ -79,15 +81,15 @@
     <footer>
         <ul>
             <li>
-                <a href="https://twitter.com/WindSweptTree" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
+                <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/adrienneroyce/" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
+                <a href="https://www.linkedin.com/in/adrienneroyce/" target="_blank" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
                 </a>
             </li>
             <li>
-                <a href="https://github.com/aroyce" title="to Github profile">
+                <a href="https://github.com/aroyce" target="_blank" title="to Github profile">
                     <i class="fab fa-github"></i>Github page
                 </a>
             </li>
