--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img class="landmark" src="images/umsi-headshot.jpg" alt="Adrienne's headshot">
         <nav>
             <ul>
-                <li><a href="" title="Homepage">Home</a></li>
+                <li class="onpage">Home</li>
                 <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
                 <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
                 <li><a href="ui-design.html" title="User Interface Design">UI Design</a></li>
