--- a/isr.html
+++ b/isr.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" title="Homepage">Home</a></li>
-                <li><a href="" title="Institute for Social Research">ISR</a></li>
+                <li class="onpage">ISR</li>
                 <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
                 <li><a href="ui-design.html" title="User Interface Design">UI Design</a></li>
             </ul>
