--- a/ui-design.html
+++ b/ui-design.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html" title="Homepage">Home</a></li>
                 <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
                 <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
-                <li><a href="" title="User Interface Design">UI Design</a></li>
+                <li class="onpage">UI Design</li>
             </ul>
         </nav>   
     </header> 
