--- a/umsi.html
+++ b/umsi.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="index.html" title="Homepage">Home</a></li>
                 <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
-                <li><a href="" title="University of Michigan School of Information">UMSI</a></li>
+                <li class="onpage">UMSI</li>
                 <li><a href="ui-design.html" title="User Interface Design">UI Design</a></li>
             </ul>
         </nav>   
