--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <header>
-        <img class="landmark" src="images/umsi-headshot.jpg" alt="Adrienne's headshot">
         <nav>
             <ul>
                 <li class="onpage">Home</li>
@@ -19,16 +18,18 @@
                 <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
                 <li><a href="ui-design.html" title="User Interface Design">UI Design</a></li>
             </ul>
-        </nav>   
+        </nav>  
+
     </header> 
     <main>
-        <section>
+        <img class="landmark" src="images/umsi-headshot.jpg" alt="Adrienne's headshot"> 
+        <section class="intro">
             <h1>Home<span>Welcome to my portfolio!</span></h1>
             <p>
                 You'll find my resum&eacute; below and highlights of my work on the following pages. The <a href="isr.html">ISR</a> page contains my accomplishments while working at the U-M Institute for Social Research (ISR). The UMSI link will take you to my projects as a part-time student at the <a href="umsi.html">University of Michigan School of Information (UMSI)</a>. The <a href="ui-design.html">UI Design</a> page displays user interface (UI) projects from classes at Washtenaw Community College.
             </p>    
         </section>
-        <section>
+        <section class="two">
             <h2>Resum&eacute;</h2>
                 <h3>Work Experience</h3>
                     <ul>
