--- a/isr.html
+++ b/isr.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <header>
-        <img class="landmark" src="images/isr-foam-model.jpg" alt="Adrienne with a 1 inch&#61;1 foot model of the U-M HomeLab">
         <nav>
             <ul>
                 <li><a href="index.html" title="Homepage">Home</a></li>
@@ -22,7 +21,8 @@
         </nav>   
     </header> 
     <main>
-        <section>
+        <img class="landmark" src="images/isr-foam-model.jpg" alt="Adrienne with a 1 inch&#61;1 foot model of the U-M HomeLab">
+        <section class="intro">
             <h1>The Institute for Social Research (ISR)<br><span>Research Center for Group Dynamics, BioSocial Methods Collaborative</span></h1>
 
         
@@ -30,7 +30,7 @@
                 The highlights from my time as lab manager for the BioSocial Methods Collaborative at the Institute for Social Research at the University of Michigan include: playing a key role in design and communication during U-M HomeLab construction; assisting the ISR web developer with the redesign of the BioSocial Methods Collaborative website; and helping develop and conduct user product research. 
             </p>
         </section>
-        <section>
+        <section class="two">
             <h2>U-M HomeLab</h2>
             <p>
                 I took a year's worth of information and combined it into a single Google document to communicate the department's design intentions to everyone involved in the project. I then transformed the proposed U-M AEC floor plan (the kitchen stove had a direct line of sight into the bathroom) by moving kitchen closer to the center of the space, adding a dedicated laundry area, and incorporating a small set of stairs. I built models; drafted floor plans and elevations; and generated posters, timelines, and brochures about the project.
@@ -50,7 +50,7 @@
                 </figure>
             </div>
         </section>
-        <section>
+        <section class="three">
             <h2>Website Redesign</h2>
             <p>
                 I evaluated the existing BioSocial Methods Collaborative website and worked with the department's managing director to create a subset of items for a card sorting activity. Based upon the results of running the card sort, I proposed an initial sitemap for the new design. From there we worked with the ISR Communications Manager and ISR Web Developer to come up with the user interface and navigation. The ISR developer created the WordPress page templates, I assisted with transferring content to the new layout.
@@ -70,7 +70,7 @@
                 </figure>
             </div>
         </section>
-        <section>
+        <section class="four">
             <h2>User Product Research</h2>
             <p>Although we worked under a non-disclosure agreement for our research efforts with Proctor &amp; Gamble, I have a screenshot of the forthcoming BioSocial Methods Collaborative website with the information that we are able to share.</p>
             <figure>
