--- a/umsi.html
+++ b/umsi.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img class="landmark" src="images/library-congress.jpg" alt="a navigational landmark photo showing arches within the Library of Congress">
+
         <nav>
             <ul>
                 <li><a href="index.html" title="Homepage">Home</a></li>
@@ -22,13 +22,14 @@
         </nav>   
     </header> 
     <main>
-        <section>
+        <img class="landmark" src="images/library-congress.jpg" alt="a navigational landmark photo showing arches within the Library of Congress">
+        <section class="intro">
             <h1>University of Michigan School of Information<br><span>Master of Science in Information (MSI) Candidate</span></h1>
             <p>
                 The University of Michigan School of Information has provided a number of wonderful opportunities. In addition to serving as Treasurer for the School of Information Masters Association (SIMA) I have participated in the projects and activities highlighted below.
             </p>
         </section>
-        <section>
+        <section class="two">
             <h2>UMSI Design Lab</h2>
             <p>
                 I volunteered as an apprentice with the UMSI Design Clinic on a project for a local mechanical engineering company. Our team created a user interface for a new software system and took second place in the end-of-year Design Clinic award ceremony. I contributed significantly to the brainstorming, information architecture, and wireframe creation.
@@ -48,7 +49,7 @@
                 </figure>
             </div>
         </section>
-        <section>
+        <section class="three">
             <h2>Astronomy Archive</h2>
             <p>
                 During the Fall 2017 semester I worked with three other students to create <a href="https://michiganastronomypics.omeka.net/home-page">an online astronomy archive</a>. The project required accessing resources at the U-M Bentley Library. We originally thought we could combine our interests in astronomy and cosmology, but soon learned that the Bentley did not hold sufficient materials on cosmology. Our focus then shifted to the history of astronomy at the University of Michigan and targeted high school and middle school teachers and students as users. 
@@ -66,7 +67,7 @@
             </figure>                    
 
         </section>
-        <section>
+        <section class="four">
             <h2>Information Architecture (IA) Summit&mdash;Poster Presentation</h2>
             <p>
                 I learned about Laban Movement Analysis while auditing a class on Engineering Applications of Media Technology. The professor recommended we attend a lecture by a visiting music professor who had used Laban methodologies to evaluate musicianship. I was intrigued by the concept and reseached the topic for possible application in human-computer interaction. I learned that it is being used in the field of robotics and there is a growing awareness for the design of mixed reality and wearable computing. I presented a poster at the 2016 IA Summit in Atlanta, and received a UMSI travel grant to attend.
