--- a/ui-design.html
+++ b/ui-design.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img class="landmark" src="images/ui-snowfarm-sm.jpg" alt="A screenshot from the index page of my Snow Farm website redesign">
+
         <nav>
             <ul>
                 <li><a href="index.html" title="Homepage">Home</a></li>
@@ -22,13 +22,14 @@
         </nav>   
     </header> 
     <main>
-        <section>
+        <img class="landmark" src="images/ui-snowfarm-sm.jpg" alt="A screenshot from the index page of my Snow Farm website redesign">
+        <section class="intro">
             <h1>User Interface (UI) Design<br><span>Washtenaw Community College (WCC)</span></h1>
             <p>
                 I created several user interface mock-ups during two interface design classes at WCC. The instructor would typically provide the company name and require a specific page layout style. Progress was evaluated with a design critique in front of the class each week.
             </p>
         </section>
-        <section>
+        <section class="two">
             <h2>Panache Bridal Mood Board and Index Page</h2>
             <p>
                 I was paired up with another student and we were given the challenge of using the color green and the theme of outer space to incorporate into our design. He and I had to take a different approach to the color and theme. Since aliens and spaceships didn't seem suitable for a high-end Southern California bridal store, I took inspiration from the ancient mariners who gazed up at the stars.
@@ -42,7 +43,7 @@
                     <figcaption>A long-and-flat index page redesign</figcaption>
             </figure>
         </section>
-        <section>
+        <section class="three">
             <h2>Moss Love Terrarium</h2>
             <p>
                 A dominant photo index page redesign for a company whose name I pulled from the instructor’s envelope of possibilities. The target user was a young bride seeking wedding decor and gifts for her bridal party.
@@ -52,7 +53,7 @@
                     <figcaption>The new Moss Love index page</figcaption>
             </figure>
         </section>
-        <section>
+        <section class="four">
             <h2>Market Basket Grocery Store</h2>
             <p>
                 This assignment was a three-bucket index page redesign; the instructor provided the text and I found the imagery. After three weekly design critiques, I honed in on a pattern that evokes the weave of basketry.
@@ -62,7 +63,7 @@
                     <figcaption>The Market Basket homepage</figcaption>
             </figure>           
         </section>
-        <section>
+        <section class="five">
             <h2>Affordable Tours</h2>
             <p>
                 Another student and I tackled this long-and-flat index page redesign. We were required to research current travel websites to find common styles for the industry, then each pick a different approach for the Affordable Tours website. I created my mockup with photos from my travels.
