--- a/ui-design.html
+++ b/ui-design.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/default.css">
     <link rel="stylesheet" type="text/css" href="css/royce.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -11,7 +12,7 @@
 </head>
 <body>
     <header>
-
+        <a id="top-section" class="jump-nav" href="#main">Jump to main content</a>
         <nav>
             <ul>
                 <li><a href="index.html" title="Homepage">Home</a></li>
@@ -22,7 +23,6 @@
         </nav>   
     </header> 
     <main>
-        <img class="landmark" src="images/ui-snowfarm-sm.jpg" alt="A screenshot from the index page of my Snow Farm website redesign">
         <section class="intro">
             <h1>User Interface (UI) Design<br><span>Washtenaw Community College (WCC)</span></h1>
             <p>
@@ -73,6 +73,10 @@
                     <figcaption>A travel company website redesign. I was able to use photos from my own travels.</figcaption>
             </figure>           
         </section>
+        <aside>
+            <img class="landmark" src="images/ui-snowfarm-sm.jpg" alt="A screenshot from the index page of my Snow Farm website redesign">
+            <a href="#top-section" class="sticky" aria-label="to top of page">To Top</a>
+        </aside>
     </main>
     <footer>
         <ul>
