--- a/umsi.html
+++ b/umsi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/default.css">
     <link rel="stylesheet" type="text/css" href="css/royce.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -11,7 +12,7 @@
 </head>
 <body>
     <header>
-
+        <a id="top-section" class="jump-nav" href="#main">Jump to main content</a>
         <nav>
             <ul>
                 <li><a href="index.html" title="Homepage">Home</a></li>
@@ -22,8 +23,7 @@
         </nav>   
     </header> 
     <main>
-        <img class="landmark" src="images/library-congress.jpg" alt="a navigational landmark photo showing arches within the Library of Congress">
-        <section class="intro">
+       <section class="intro">
             <h1>University of Michigan School of Information<br><span>Master of Science in Information (MSI) Candidate</span></h1>
             <p>
                 The University of Michigan School of Information has provided a number of wonderful opportunities. In addition to serving as Treasurer for the School of Information Masters Association (SIMA) I have participated in the projects and activities highlighted below.
@@ -78,6 +78,10 @@
             </figure>
 
         </section>
+        <aside>
+            <img class="landmark" src="images/library-congress.jpg" alt="a navigational landmark photo showing arches within the Library of Congress">
+            <a href="#top-section" class="sticky" aria-label="to top of page">To Top</a>
+        </aside>
     </main>
     <footer>
         <ul>
