--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>  
 
     </header> 
-    <main>
+    <main id="main">
         <section class="intro">
             <h1>Home<span>Welcome to my portfolio!</span></h1>
             <p>
