--- a/ui-design.html
+++ b/ui-design.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>   
     </header> 
-    <main>
+    <main id="main">
         <section class="intro">
             <h1>User Interface (UI) Design<br><span>Washtenaw Community College (WCC)</span></h1>
             <p>
