--- a/umsi.html
+++ b/umsi.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>   
     </header> 
-    <main>
+    <main id="main">
        <section class="intro">
             <h1>University of Michigan School of Information<br><span>Master of Science in Information (MSI) Candidate</span></h1>
             <p>
