--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </p>    
         </section>
         <section class="two">
-            <h2>Resum&eacute;</h2>
+            <h2>Adrienne Royce</h2>
                 <h3>Work Experience</h3>
                     <ul>
                         <li>ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
@@ -57,7 +57,7 @@
                                 <li>Received Pure Visibility's "You Rock" award</li>
                             </ul></li>
                         <li>Rochman Design-Build<span>Assistant Designer &amp; Office Manager&mdash;May 1996 to February 2000</span>                <ul>
-                                <li>Assisted with assessing client needs and selectin materials</li>
+                                <li>Assisted with assessing client needs and selecting materials</li>
                                 <li>Maintained job cost accounting using FileMaker Pro</li>
                                 <li>Planned and hosted open houses</li>
                                 <li>Created advertisements and fliers</li>
