--- a/umsi.html
+++ b/umsi.html
@@ -30,7 +30,7 @@
             </p>
         </section>
         <section class="two">
-            <h2>UMSI Design Lab</h2>
+            <h2>UMSI Design Clinic</h2>
             <p>
                 I volunteered as an apprentice with the UMSI Design Clinic on a project for a local mechanical engineering company. Our team created a user interface for a new software system and took second place in the end-of-year Design Clinic award ceremony. I contributed significantly to the brainstorming, information architecture, and wireframe creation.
             </p>
