--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </p>    
         </section>
         <section class="two">
-            <h2>Adrienne Royce</h2>
+            <h2>Adrienne Royce resum&eacute;</h2>
                 <h3>Work Experience</h3>
                     <ul>
                         <li>ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
