--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="onpage">Home</li>
                 <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
                 <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
-                <li><a href="ui-design.html" title="User Interface Design">UI Design</a></li>
+                <li><a href="wcc.html" title="Washtenaw Community College">WCC</a></li>
             </ul>
         </nav>  
 
@@ -31,7 +31,7 @@
             </p>    
         </section>
         <section class="two">
-            <h2>Adrienne Royce resum&eacute;</h2>
+            <h2>Adrienne Royce Resum&eacute;</h2>
                 <h3>Work Experience</h3>
                     <ul>
                         <li>ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
@@ -57,7 +57,7 @@
                                 <li>Received Pure Visibility's "You Rock" award</li>
                             </ul></li>
                         <li>Rochman Design-Build<span>Assistant Designer &amp; Office Manager&mdash;May 1996 to February 2000</span>                <ul>
-                                <li>Assisted with assessing client needs and selecting materials</li>
+                                <li>Assisted with assessing client needs and selectin materials</li>
                                 <li>Maintained job cost accounting using FileMaker Pro</li>
                                 <li>Planned and hosted open houses</li>
                                 <li>Created advertisements and fliers</li>
@@ -88,6 +88,6 @@
             </li>
         </ul>
     </footer>
-<script src="scripts/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
