--- a/isr.html
+++ b/isr.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html" title="Homepage">Home</a></li>
                 <li class="onpage">ISR</li>
                 <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
-                <li><a href="ui-design.html" title="User Interface Design">UI Design</a></li>
+                <li><a href="wcc.html" title="Washtenaw Community College">WCC</a></li>
             </ul>
         </nav>   
     </header> 
@@ -32,7 +32,7 @@
         <section class="two">
             <h2>U-M HomeLab</h2>
             <p>
-                I took a year's worth of information and combined it into a single Google document to communicate the department's design intentions to everyone involved in the project. I then transformed the proposed U-M AEC floor plan (the kitchen stove had a direct line of sight into the bathroom) by moving kitchen closer to the center of the space, adding a dedicated laundry area, and incorporating a small set of stairs. I built models; drafted floor plans and elevations; and generated posters, timelines, and brochures about the project.
+                I took a year's worth of information and combined it into a single Google document to communicate the department's design intentions to everyone involved in the project. I then transformed the proposed U-M AEC floor plan (the kitchen stove had a direct line of sight into the bathroom) by moving the kitchen closer to the center of the lab space, adding a dedicated laundry area, and incorporating a small set of stairs. I built models; drafted floor plans and elevations; and generated posters, timelines, and brochures about the project.
             </p>
             <div class="tile-container">
                 <figure  class="tile">
@@ -101,5 +101,6 @@
             </li>
         </ul>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
